add collapsible list and styling

--- a/meatLasagna.html
+++ b/meatLasagna.html
@@ -8,22 +8,147 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="page">
+    <div class="container">
       <header>
-        <h1></h1>
+        <h1>Task 1 - HTML Recipes</h1>
       </header>
       <hr />
       <div class="recipes">
         <div class="recipe">
           <p>Meat Lasagna Recipe</p>
-          <ul class="ingredients-list">
+          <ul>
             <li>
-              <label>
-                <input type="checkbox" disabled />
-              </label>
-              ingredient 1
+              <span></span>
+              1 pound sweet Italian sausage
+            </li>
+            <li>
+              <span></span>
+              3/4 pound lean ground beef
+            </li>
+            <li>
+              <span></span>
+              1/2 cup minced onion
+            </li>
+            <li>
+              <span></span>
+              2 cloves garlic, crushed
+            </li>
+            <li>
+              <span></span>
+              1 (28 ounce) can crushed tomatoes
+            </li>
+            <li>
+              <span></span>
+              2 (6 ounce) cans tomato paste
+            </li>
+            <li>
+              <span></span>
+              2 (6.5 ounce) cans canned tomato sauce
+            </li>
+            <li>
+              <span></span>
+              1/2 cup water
+            </li>
+            <li>
+              <span></span>
+              2 tablespoons white sugar
+            </li>
+            <li>
+              <span></span>
+              1 1/2 teaspoons dried basil leaves
             </li>
           </ul>
+        </div>
+        <div class="recipe collapsible">
+          <input type="checkbox" id="list-toggle" />
+          <p>Meat Lasagna Recipe</p>
+          <ul class="ingredients-collapsible">
+            <li>
+              <span></span>
+              1 pound sweet Italian sausage
+            </li>
+            <li>
+              <span></span>
+              3/4 pound lean ground beef
+            </li>
+            <li>
+              <span></span>
+              1/2 cup minced onion
+            </li>
+            <li>
+              <span></span>
+              2 cloves garlic, crushed
+            </li>
+            <li>
+              <span></span>
+              1 (28 ounce) can crushed tomatoes
+            </li>
+            <li>
+              <span></span>
+              2 (6 ounce) cans tomato paste
+            </li>
+            <li>
+              <span></span>
+              2 (6.5 ounce) cans canned tomato sauce
+            </li>
+            <li>
+              <span></span>
+              1/2 cup water
+            </li>
+            <li>
+              <span></span>
+              2 tablespoons white sugar
+            </li>
+            <li>
+              <span></span>
+              1 1/2 teaspoons dried basil leaves
+            </li>
+            <li>
+              <span></span>
+              1/2 teaspoons fennel seeds
+            </li>
+            <li>
+              <span></span>
+              1 1/2 teaspoons salt, divided, or to taste
+            </li>
+            <li>
+              <span></span>
+              1/4 teaspoon ground black pepper
+            </li>
+            <li>
+              <span></span>
+              4 tablespoons chopped fresh parsley
+            </li>
+            <li>
+              <span></span>
+              12 lasagna noodles
+            </li>
+            <li>
+              <span></span>
+              16 ounces ricotta cheese
+            </li>
+            <li>
+              <span></span>
+              1 egg
+            </li>
+            <li>
+              <span></span>
+              3/4 pound mozarella cheese, sliced
+            </li>
+            <li>
+              <span></span>
+              3/4 cup grated Parmesan cheese
+            </li>
+            <li>
+              <span></span>
+              2 cloves garlic, crushed
+            </li>
+          </ul>
+
+          <label for="list-toggle">
+            <span class="show-more">Show More</span>
+            <span class="show-less">Show Less</span>
+          </label>
         </div>
       </div>
     </div>
